2004-04-04  Matti Aarnio  <mea@zmailer.org>

	* configure.in:
	    Version label: 2.99.57-pre1

	* proto/post-install.sh.in:
	    Do CONDITIONALLY create individual subdirectories
	    inside the $POSTOFFICE  when called.  E.g. if a directory
	    does already exist, don't remake it, but possibly make
	    its subdirectories!

	* lib/fdpassing.c:
	    Pass a fd thru a given handle to another process.

	* scheduler/pipes.c -> lib/pipes.c,  scheduler/resources.c ->
	  lib/resources.c, include/libz.h, scheduler/prototypes.h,
	  router/daemonsub.c, lib/Makefile.in, scheduler/Makefile.in,
	  router/Makefile.in:
	    Moved the pipes.c, and resources.c files from scheduler/ to lib/,
	    it has uses outside the scheduler, after all...

2004-04-01  Matti Aarnio  <mea@zmailer.org>

	* README.UPGRADING, include/libz.h, include/shmmib.h,
	  lib/fdstatfs-test.c, lib/fdstatfs.c, lib/zshmmibattach.c,
	  router/rfc822.c, scheduler/mailq.inc, scheduler/scheduler.c,
	  smtpserver/smtpcmds.c, smtpserver/smtpdata.c,
	  smtpserver/smtpserver.c:
	    - new gauges tracking the number of i-nodes available/used
	      in various partitions where ZMailer has activity.
	      (If those filesystems are separate to begin with...)
	      (Spending reserved spaces in the memory block, no
	       need to change block magic numbers :) )
	    - allowing split of $POSTOFFICE into two separate
	      filesystems, although "transport/" MUST be mounted
	      as  $POSTOFFICE/transport/ !

2004-03-31  Matti Aarnio  <mea@zmailer.org>

	* router/libdb/gdbm.c, router/libdb/ndbm.c, router/db.c:
	    Hunting strange memory corruptions, which turned out to
	    be my own mistakes from about 20 hours ago...  Damn.

	* proto/scheduler.conf.in:
	    Add  "smtp-par/*"  clause, explicite parallellism
	    to be used, if postmaster so desires (to some target
	    where there is lots of traffic...)

	* router/libdb/gdbm.c:
	    Eugene Crosser reports odd gdbm database opening problems