@@ -625,3 +625,6 @@ extern int decodebase64string __((const char *instr, int inlen, char *outstr, in
 extern int  fd_nonblockingmode __((int fd));
 extern int  fd_blockingmode __((int fd));
 extern void fd_restoremode __((int fd, int mode));
+
+/* subdaemons.c */
+int subdaemons_init __((void));
